fix the alignment of each project category in project categories section

--- a/src/components/design/project-categories/ProjectCategoriesSection.module.css
+++ b/src/components/design/project-categories/ProjectCategoriesSection.module.css
@@ -33,28 +33,41 @@
   .section {
     padding: 160px 165px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
   }
+
   .app-design {
     background-image: url("/src/assets/home/desktop/image-app-design.jpg");
+    min-height: 100%;
   }
   .graphic-design {
     background-image: url("/src/assets/home/desktop/image-graphic-design.jpg");
+    min-height: 100%;
   }
   .web-design {
-    min-height: 100%;
     background-image: url("/src/assets/home/desktop/image-web-design-large.jpg");
+    min-height: 100%;
   }
-  .web-design-container {
+
+  /* targetting links using "a" tag instead of class - setting classname on react router's Link component does not work */
+  .section a:first-child {
     grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    box-sizing: border-box;
+  }
+
+  /* first child should take up two rows instead of one when grid is a two-row-grid */
+  .two-row-grid a:first-child {
     grid-row: 1 / 3;
   }
-  .app-design-container {
+
+  .section a:nth-child(2) {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+    box-sizing: border-box;
   }
-  .graphic-design-container {
+  .section a:nth-child(3) {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    box-sizing: border-box;
   }
 }
